force-app/main/default/objects/TimeTrade_SF1__CreateInvitationActionDefault__mdt/TimeTrade_SF1__CreateInvitationActionDefault__mdt.object-meta.xml
<CustomObject>
    <label>CreateInvitationActionDefault</label>
    <pluralLabel>CreateInvitationActionDefaults</pluralLabel>
</CustomObject>