force-app/main/default/objects/TimeTrade_SF1__CreateInvitationActionDefault__mdt/fields/TimeTrade_SF1__Availability_End_Day_Offset__c.field-meta.xml
<CustomField>
    <fullName>TimeTrade_SF1__Availability_End_Day_Offset__c</fullName>
    <defaultValue>7</defaultValue>
    <description>Used when Availability Type is &quot;Date Range&quot;.  Number of days after invitation creation date that availability range ends&#39;</description>
    <inlineHelpText>Used when Availability Type is &quot;Date Range&quot;.  Number of days after invitation creation date that availability range ends&#39;</inlineHelpText>
    <label>Availability End Day Offset</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>