force-app/main/default/objects/TimeTrade_SF1__CreateInvitationActionDefault__mdt/fields/TimeTrade_SF1__Availability_End_Time__c.field-meta.xml
<CustomField>
    <fullName>TimeTrade_SF1__Availability_End_Time__c</fullName>
    <defaultValue>&quot;11:30 PM&quot;</defaultValue>
    <description>Use with the end date to calculate the Availability End Date/Time value. Must be a string like &quot;12:00 AM&quot;. Will be interpreted in timezone of user executing process.</description>
    <inlineHelpText>Use with the end date to calculate the Availability End Date/Time value. Must be a string like &quot;11:59 PM&quot;. Will be interpreted in timezone of user executing process.</inlineHelpText>
    <label>Availability End Time</label>
    <length>12</length>
    <type>Text</type>
</CustomField>