force-app/main/default/objects/TimeTrade_SF1__CreateInvitationActionDefault__mdt/fields/TimeTrade_SF1__Availability_Start_Time__c.field-meta.xml
<CustomField>
    <fullName>TimeTrade_SF1__Availability_Start_Time__c</fullName>
    <defaultValue>&quot;12:00 AM&quot;</defaultValue>
    <description>Use with the state date to calculate the Availability Start Date/Time value.  Must be a string like &quot;12:00 AM&quot;.  Will be interpreted in timezone of user executing process.</description>
    <inlineHelpText>Use with the state date to calculate the Availability Start Date/Time value.  Must be a string like &quot;12:00 AM&quot;.  Will be interpreted in timezone of user executing process.</inlineHelpText>
    <label>Availability Start Time</label>
    <length>12</length>
    <type>Text</type>
</CustomField>