force-app/main/default/objects/TimeTrade_SF1__CreateInvitationActionDefault__mdt/fields/TimeTrade_SF1__Availability_Type__c.field-meta.xml
<CustomField>
    <fullName>TimeTrade_SF1__Availability_Type__c</fullName>
    <defaultValue>&quot;Open&quot;</defaultValue>
    <description>Specifies the type of availability.  Rolling Window requires a Rolling Window Expiration Date be specified.  Date Range requires a Start and End Date be specified.</description>
    <inlineHelpText>Specifies the type of availability.  Rolling Window requires a Rolling Window Expiration Date be specified.  Date Range requires a Start and End Date be specified.</inlineHelpText>
    <label>Availability Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Open</fullName>
                <default>true</default>
                <label>Open</label>
            </value>
            <value>
                <fullName>Rolling Window</fullName>
            </value>
            <value>
                <fullName>Data Range</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>