force-app/main/default/objects/TimeTrade_SF1__CreateInvitationActionDefault__mdt/fields/TimeTrade_SF1__Default_Public_Group_Name__c.field-meta.xml
<CustomField>
    <fullName>TimeTrade_SF1__Default_Public_Group_Name__c</fullName>
    <description>Name of the public group which acts as the default organizer when the invokable action group name parameter is sent wrong</description>
    <inlineHelpText>Please input the group name which needs to be the default organizer</inlineHelpText>
    <label>Default Public Group Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>