force-app/main/default/objects/TimeTrade_SF1__CreateInvitationActionDefault__mdt/fields/TimeTrade_SF1__Duration__c.field-meta.xml
<CustomField>
    <fullName>TimeTrade_SF1__Duration__c</fullName>
    <defaultValue>&quot;30 Minutes&quot;</defaultValue>
    <description>Default meeting duration for Time Trade meetings created via invokable actions, typical via Process Builder.</description>
    <inlineHelpText>Default meeting duration for Time Trade meetings created via invokable actions, typical via Process Builder.</inlineHelpText>
    <label>Duration</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>15 Minutes</fullName>
                <default>true</default>
                <label>15 Minutes</label>
            </value>
            <value>
                <fullName>30 Minutes</fullName>
            </value>
            <value>
                <fullName>60 Minutes</fullName>
            </value>
            <value>
                <fullName>90 Minutes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>