force-app/main/default/objects/TimeTrade_SF1__CreateInvitationActionDefault__mdt/fields/TimeTrade_SF1__Location_Type__c.field-meta.xml
<CustomField>
    <fullName>TimeTrade_SF1__Location_Type__c</fullName>
    <defaultValue>&quot;Physical&quot;</defaultValue>
    <description>Specifies the meeting type.  &quot;Physical&quot; is used for in person.  Specify additional details in Location Text when &quot;Web Conference&quot; or &quot;Phone&quot; is selected.</description>
    <inlineHelpText>Specifies the meeting type.  &quot;Physical&quot; is used for in person.  Specify additional details in Location Text when &quot;Web Conference&quot; or &quot;Phone&quot; is selected.</inlineHelpText>
    <label>Location Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Physical</fullName>
                <default>true</default>
                <label>Physical</label>
            </value>
            <value>
                <fullName>Web Conference</fullName>
            </value>
            <value>
                <fullName>Phone</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>