force-app/main/default/objects/TimeTrade_SF1__CreateInvitationActionDefault__mdt/fields/TimeTrade_SF1__Phone__c.field-meta.xml
<CustomField>
    <fullName>TimeTrade_SF1__Phone__c</fullName>
    <description>Specify default phone number when Location Type is specified as &quot;Phone&quot; and no other value for phone is provided.</description>
    <inlineHelpText>Specify default phone number when Location Type is specified as &quot;Phone&quot; and no other value for phone is provided.</inlineHelpText>
    <label>Phone</label>
    <type>Phone</type>
</CustomField>