force-app/main/default/objects/TimeTrade_SF1__CreateInvitationActionDefault__mdt/fields/TimeTrade_SF1__Physical_Location__c.field-meta.xml
<CustomField>
    <fullName>TimeTrade_SF1__Physical_Location__c</fullName>
    <description>Default value for Location when Physical is chosen for Location Type.</description>
    <inlineHelpText>Default value for Location when Physical is chosen for Location Type.</inlineHelpText>
    <label>Physical Location</label>
    <length>255</length>
    <type>Text</type>
</CustomField>