force-app/main/default/objects/TimeTrade_SF1__CreateInvitationActionDefault__mdt/fields/TimeTrade_SF1__Pooled_Availability_Type__c.field-meta.xml
<CustomField>
    <fullName>TimeTrade_SF1__Pooled_Availability_Type__c</fullName>
    <defaultValue>&quot;Random&quot;</defaultValue>
    <label>Pooled Availability Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>