force-app/main/default/objects/TimeTrade_SF1__CreateInvitationActionDefault__mdt/fields/TimeTrade_SF1__Public_Group_Name__c.field-meta.xml
<CustomField>
    <fullName>TimeTrade_SF1__Public_Group_Name__c</fullName>
    <label>Public Group Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>