force-app/main/default/objects/TimeTrade_SF1__CreateInvitationActionDefault__mdt/fields/TimeTrade_SF1__Rolling_Window_Duration__c.field-meta.xml
<CustomField>
    <fullName>TimeTrade_SF1__Rolling_Window_Duration__c</fullName>
    <defaultValue>&quot;2 Weeks&quot;</defaultValue>
    <label>Rolling Window Duration</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1 Week</fullName>
                <default>true</default>
                <label>1 Week</label>
            </value>
            <value>
                <fullName>2 Weeks</fullName>
            </value>
            <value>
                <fullName>1 Month</fullName>
            </value>
            <value>
                <fullName>2 Months</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>