force-app/main/default/objects/TimeTrade_SF1__CreateInvitationActionDefault__mdt/fields/TimeTrade_SF1__Rolling_Window_Expire_Days__c.field-meta.xml
<CustomField>
    <fullName>TimeTrade_SF1__Rolling_Window_Expire_Days__c</fullName>
    <defaultValue>14</defaultValue>
    <description>Used when Availability Type is &quot;Rolling WIndow&quot;. Number of days after invitation creation date the rolling window expires.</description>
    <inlineHelpText>Used when Availability Type is &quot;Rolling WIndow&quot;. Number of days after invitation creation date the rolling window expires.</inlineHelpText>
    <label>Rolling Window Expire Days</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>