force-app/main/default/objects/TimeTrade_SF1__CreateInvitationActionDefault__mdt/fields/TimeTrade_SF1__Send_Invite__c.field-meta.xml
<CustomField>
    <fullName>TimeTrade_SF1__Send_Invite__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Automatically email invitation when it is created.</description>
    <inlineHelpText>Automatically email invitation when it is created.</inlineHelpText>
    <label>Send Invite?</label>
    <type>Checkbox</type>
</CustomField>