force-app/main/default/objects/TimeTrade_SF1__CreateInvitationActionDefault__mdt/fields/TimeTrade_SF1__Template_Name__c.field-meta.xml
<CustomField>
    <fullName>TimeTrade_SF1__Template_Name__c</fullName>
    <description>The name of the Invitation Template to use when creating invitations.</description>
    <inlineHelpText>The name of the Invitation Template to use when creating invitations.</inlineHelpText>
    <label>Template Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>