force-app/main/default/objects/TimeTrade_SF1__CreateInvitationActionDefault__mdt/fields/TimeTrade_SF1__Web_Conference__c.field-meta.xml
<CustomField>
    <fullName>TimeTrade_SF1__Web_Conference__c</fullName>
    <description>Default Web Conference type when Web Conference is chosen as Location Type.</description>
    <inlineHelpText>Default Web Conference type when Web Conference is chosen as Location Type.</inlineHelpText>
    <label>Web Conference</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>WebEx</fullName>
                <default>true</default>
                <label>WebEx</label>
            </value>
            <value>
                <fullName>Zoom</fullName>
            </value>
            <value>
                <fullName>GoToMeeting</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>